# task-_-

./: README.md
2204_1/: 2204_1.pro  CMakeLists.txt  README.md  ThreadPool.h  main.cpp  widget.cpp  widget.h  widget.ui
task-_-/: README.md  timer_decor.py  tsk1.py  tsk2.py  tsk3.py
